# north

./: .dockerignore  .env.example  .gitignore  AGENT_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LifeOS_Architecture_v2.pages  README.md  SECURITY.md  decisions.md  docker-compose.dev.yml  docker-compose.yml  exceptions.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
agents/: __init__.py  agentic_llm_agent.py  base.py  constants.py  context_compaction.py  exceptions.py  llm_agent.py  models.py  reasoning.py  registry.py  schemas.py  user_interaction.py  workspace_lock.py
agents/architect/: agent.py  config.yaml
agents/architect/prompts/: system.md
agents/code/: agent.py  config.yaml  tools.yaml
agents/code/prompts/: system.md
agents/coder/: agent.py  config.yaml  tools.yaml
agents/coder/prompts/: system.md
agents/finance/: README.md  agent.py  config.yaml  tools.yaml
agents/finance/prompts/: system.md
agents/general/: agent.py  config.yaml  tools.yaml
agents/general/prompts/: system.md
agents/health/: README.md  agent.py  config.yaml  tools.yaml
agents/health/prompts/: system.md
agents/home/: agent.py  config.yaml  tools.yaml
agents/home/prompts/: system.md
agents/job/: README.md  agent.py  config.yaml  tools.yaml
agents/news_briefing/: agent.py  config.yaml
agents/researcher/: agent.py  config.yaml
agents/tester/: agent.py  config.yaml  tools.yaml
agents/university/: README.md  agent.py  config.yaml  tools.yaml
approval/: __init__.py  base.py  callback_server.py  card_factory.py  exceptions.py  interaction.py  judgement_filter.py  macos.py  models.py  store.py  terminal.py  tui.py
cli/: __init__.py  _client.py  _server.py  constants.py  docker-compose.yml  formatting.py  main.py  tui.py  tui_v2.py
config/: dependencies.py  settings.py  strategy.py
context/: __init__.py  base.py  embedding_index.py  episodic.py  exceptions.py  extraction.py  fact_store.py  file_store.py  injection.py  models.py  repo_instructions.py  task_snapshot.py
docs/: ARCHITECTURE.md  CODING_STYLE.md  TECHNICAL_FEATURES.md
inference/: __init__.py  base.py  capability.py  constants.py  cooldowns.py  cost_tracker.py  dispatcher.py  exceptions.py  factory.py  fallback_pools.py  models.py  openrouter.py  pool_builder.py  provider.py  routing.py
inference/providers/: gemini.py  groq.py  openai_compat.py  openrouter.py
jobs/: __init__.py  base.py  cron_store.py  exceptions.py  models.py  scheduler.py  sqlite_processor.py
ledger/: __init__.py  base.py  exceptions.py  models.py  sqlite_writer.py
memory/: __init__.py  base.py  consolidator.py  documents.py  embeddings.py  episodic.py  extraction.py  facts.py  gateway.py  injection.py  models.py
orchestrator/: __init__.py  api_router.py  app.py  classifier.py  constants.py  exceptions.py  failure_handler.py  models.py  north_star.py  orchestrator.py  router.py  stream.py  synthesizer.py  task_context.py  verification.py
prompts/: classifier.md  north_star.md  planner.md  router.md  synthesizer.md
scripts/: install.sh
tests/: conftest.py
tests/integration/: README.md  test_orchestrator.py
tests/unit/: test_smoke.py
tools/: __init__.py  _path.py  base.py  confidence.py  exceptions.py  models.py  registry.py  tool_index.py
tools/analysis/: __init__.py  check_types.py
tools/implementations/: _path.py  bash.py  calendar_api.py  canvas_api.py  expense_tracker.py  fitness_tracker.py  gmail_api.py  linkedin_api.py  list_dir.py  market_data_api.py  nutrition_api.py  patch_file.py  read_file.py  schedule_task.py  search_files.py  web_search.py  write_file.py
tools/semantic/: __init__.py  find_references.py  list_dir.py  read_file.py  search_symbols.py
tools/specialized/: _approval.py  _subprocess.py  bash.py  gh_tool.py  git_tool.py  kasa_tool.py  patch_file.py  shell_tool.py
tools/universal/: create_agent.py  create_tool.py  fetch_url.py  get_task_status.py  glob.py  list_dir.py  query_metrics.py  read_file.py  schedule_task.py  search_files.py  web_search.py  write_file.py
utils/: __init__.py  db.py  ids.py  logging.py  math.py  net.py  prompts.py  security.py  tasks.py  text.py  time.py  version.py
web/: routes.py
web/templates/: agents.html  approvals.html  base.html  context_doc.html  context_index.html  dashboard.html  inference.html  jobs.html  ledger.html  metrics.html
(+45 files in other folders)
