[project]
name = "north"
version = "0.0.0"
description = "Personal AI operating system. Pre-implementation; the spec lives in README.md."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic-settings>=2.2.0",
    "jinja2>=3.1.0",
    "typer>=0.9.0",
    "cryptography>=42.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast tests with no external systems",
    "integration: tests against a running Orchestrator stack",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
