[project]
name = "north"
version = "1.3.3"
description = "north — Personal Life Operating System."
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic-settings>=2.2.0",
    "jinja2>=3.1.0",
    "typer>=0.9.0",
    "python-multipart>=0.0.29",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "sounddevice>=0.4.6; sys_platform == 'darwin'",
    "pynput>=1.7.6; sys_platform == 'darwin'",
    "beautifulsoup4>=4.12.0",
    "numpy>=1.26.0; sys_platform == 'darwin'",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "ddgs>=1.0.0",
    "python-kasa>=0.7.0",
]

[project.scripts]
north = "cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools]
py-modules = ["exceptions"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", ".venv*", "build*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md", "*.html", "*.css", "*.js", "*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast tests with no external systems",
    "integration: tests against a running Orchestrator stack",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "SIM"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
